--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,5 @@
-[package]
-name = "bitcoin-vault"
-version = "0.1.0"
-edition = "2021"
-
-[dependencies]
-bitcoin = { version = "0.32.3", features = ["serde"] }
+[workspace]
+members = [
+    "vault",
+    "wasm",
+]
