feat: clippy warning

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,11 @@
 [workspace]
-members = [
-    "vault",
-    "wasm",
-]
+members = ["vault", "wasm"]
+resolver = "2"
+
+[profile.release]
+# Optimize for size
+opt-level = "s"
+# Enable link-time optimization
+lto = true
+# Strip debug symbols
+strip = true
