--- a/wasm/Cargo.toml
+++ b/wasm/Cargo.toml
@@ -15,7 +15,7 @@ default = ["console_error_panic_hook"]
 # Exact comment with solution: https://github.com/rustwasm/wasm-pack/issues/886#issuecomment-689597345
 wasm-bindgen = "=0.2.60"
 bitcoin = { version = "0.32.3", features = ["serde"] }
-bitcoin-vault = { package = "bitcoin-vault", path = "../vault"}
+bitcoin-vault = { package = "bitcoin-vault", path = "../vault" }
 
 # The `console_error_panic_hook` crate provides better debugging of panics by
 # logging them with `console.error`. This is great for development, but requires
@@ -35,6 +35,6 @@ hex = "0.4.3"
 wasm-bindgen-test = "0.3.10"
 byteorder = "1.3.4"
 
-[profile.release]
-# Tell `rustc` to optimize for small code size.
-opt-level = "s"
+# [profile.release]
+# # Tell `rustc` to optimize for small code size.
+# opt-level = "s"
