test: setup basic test

--- a/vault/Makefile
+++ b/vault/Makefile
@@ -8,3 +8,7 @@ ifeq ($(and $(m),$(f)),)
 else
 	RUST_BACKTRACE=1 RUST_LOG=debug cargo test --lib $(m)::tests::$(f) -- --nocapture
 endif
+
+lib:
+	RUST_BACKTRACE=1 RUST_LOG=debug cargo build --package bitcoin-vault && \
+	RUST_BACKTRACE=1 RUST_LOG=debug cargo test --package bitcoin-vault --lib -- tests --show-output --nocapture
