--- a/wasm/example/package.json
+++ b/wasm/example/package.json
@@ -2,7 +2,10 @@
     "name": "bitconi-vault",
     "license": "MIT",
     "dependencies": {
+        "@mempool/mempool.js": "^2.3.0",
+        "bip174": "^3.0.0-rc.1",
         "bip32": "^5.0.0-rc.0",
+        "bitcoin-core-ts": "^3.0.3",
         "bitcoin-vault": "link:..",
         "bitcoinjs-lib": "^7.0.0-rc.0",
         "ecpair": "^3.0.0-rc.0",
@@ -13,7 +16,7 @@
         "@types/mocha": "^8.0.3",
         "@types/node": "^14.6.4",
         "chai": "^4.2.0",
-        "ethers": "5.0.12",
+        "ethers": "^6.13.4",
         "mocha": "^8.1.3",
         "prettier": "^2.1.1",
         "ts-node": "^9.0.0",
