--- a/wasm/package.json
+++ b/wasm/package.json
@@ -10,5 +10,24 @@
     ],
     "scripts": {
         "build": "./build.sh && node web-wasm.js"
+    },
+    "dependencies": {
+        "@mempool/mempool.js": "^2.3.0",
+        "bip174": "^3.0.0-rc.1",
+        "bitcoin-core-ts": "^3.0.3",
+        "bitcoinjs-lib": "^7.0.0-rc.0",
+        "ecpair": "^3.0.0-rc.0",
+        "tiny-secp256k1": "^2.2.3"
+    },
+    "devDependencies": {
+        "@types/chai": "^5.0.0",
+        "@types/mocha": "^10.0.9",
+        "@types/node": "^22.7.9",
+        "chai": "^5.1.2",
+        "mocha": "^10.7.3",
+        "prettier": "^2.1.1",
+        "ts-node": "^10.9.2",
+        "tslint": "^5.20.1",
+        "typescript": "^5.6.3"
     }
 }
