--- a/wasm/example/tsconfig.json
+++ b/wasm/example/tsconfig.json
@@ -6,10 +6,7 @@
         "outDir": "lib",
         "rootDir": ".",
         "lib": ["es2019"],
-        "typeRoots": ["./node_modules/@types"],
-        "paths": {
-            "@/*": ["./src/*"],
-        }
+        "typeRoots": ["./node_modules/@types"]
     },
-    "include": ["./src/**/*.ts", "./test/**/*", "src/utils.ts"]
+    "include": ["./src/**/*", "./test/**/*"]
 }
