Update example code

--- a/wasm/example/package.json
+++ b/wasm/example/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "bitconi-vault",
+    "name": "bitcoin-vault",
     "license": "MIT",
     "dependencies": {
         "@mempool/mempool.js": "^2.3.0",
