--- a/wasm/package.json
+++ b/wasm/package.json
@@ -1,15 +1,17 @@
 {
     "name": "bitcoin-vault",
     "version": "0.1.0",
-    "browser": "dist/bitcoin-vault-web.js",
-    "main": "dist/bitcoin-vault-node.js",
+    "browser": "dist/index.js",
+    "main": "dist/index-node.js",
     "files": [
         "dist/*.ts",
         "dist/*.wasm",
         "dist/*.js"
     ],
     "scripts": {
-        "build": "./build.sh && node web-wasm.js"
+        "build:wasm": "./build.sh && node scripts/web-wasm.js",
+        "build:ts": "tsc -p tsconfig.json",
+        "build": "npm run build:wasm && npm run build:ts && node scripts/combine.js"
     },
     "dependencies": {
         "@mempool/mempool.js": "^2.3.0",
@@ -24,6 +26,7 @@
         "@types/mocha": "^10.0.9",
         "@types/node": "^22.7.9",
         "chai": "^5.1.2",
+        "fs-extra": "^11.2.0",
         "mocha": "^10.7.3",
         "prettier": "^2.1.1",
         "ts-node": "^10.9.2",
