--- a/example/package.json
+++ b/example/package.json
@@ -1,33 +1,25 @@
 {
-    "name": "bitcoin-vault-example",
-    "license": "MIT",
-    "dependencies": {
-        "@mempool/mempool.js": "^2.3.0",
-        "bip174": "^3.0.0-rc.1",
-        "bip32": "^5.0.0-rc.0",
-        "bitcoin-core-ts": "^3.0.3",
-        "bitcoin-vault": "link:..",
-        "bitcoinjs-lib": "^7.0.0-rc.0",
-        "ecpair": "^3.0.0-rc.0",
-        "tiny-secp256k1": "^2.2.3"
-    },
-    "devDependencies": {
-        "@types/chai": "^4.2.12",
-        "@types/mocha": "^8.0.3",
-        "@types/node": "^14.6.4",
-        "chai": "^4.2.0",
-        "ethers": "^6.13.4",
-        "mocha": "^8.1.3",
-        "prettier": "^2.1.1",
-        "ts-node": "^9.0.0",
-        "tslint": "^6.1.3",
-        "typescript": "^4.0.2"
-    },
-    "scripts": {
-        "build": "tsc -b",
-        "clean": "rm -rf lib/*",
-        "test": "mocha -r ts-node/register test/*.test.ts --exit --no-timeout",
-        "lint": "tslint -c tslint.json test/*.ts",
-        "fmt": "prettier --tab-width 4 --print-width 120 --parser typescript --write test/*.ts"
-    }
+  "name": "bitcoin-vault-example",
+  "license": "MIT",
+  "dependencies": {
+    "@mempool/mempool.js": "^2.3.0",
+    "bip174": "^3.0.0-rc.1",
+    "bip32": "^5.0.0-rc.0",
+    "bitcoin-core-ts": "^3.0.3",
+    "bitcoinjs-lib": "^7.0.0-rc.0",
+    "ecpair": "^3.0.0-rc.0",
+    "tiny-secp256k1": "^2.2.3",
+    "bitcoin-vault": "workspace:*"
+  },
+  "devDependencies": {
+    "ethers": "^6.13.4",
+    "typescript": "^5.6.3"
+  },
+  "scripts": {
+    "build": "tsc -b",
+    "clean": "rm -rf lib/*",
+    "test": "mocha -r ts-node/register test/*.test.ts --exit --no-timeout",
+    "lint": "tslint -c tslint.json test/*.ts",
+    "fmt": "prettier --tab-width 4 --print-width 120 --parser typescript --write test/*.ts"
+  }
 }
