--- a/example/package.json
+++ b/example/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "bitcoin-vault-example",
+  "name": "@scalar/bitcoin-vault-example",
   "license": "MIT",
   "dependencies": {
     "@mempool/mempool.js": "^2.3.0",
@@ -9,9 +9,10 @@
     "bitcoinjs-lib": "^7.0.0-rc.0",
     "ecpair": "^3.0.0-rc.0",
     "tiny-secp256k1": "^2.2.3",
-    "bitcoin-vault": "workspace:*"
+    "@scalar/bitcoin-vault": "workspace:*"
   },
   "devDependencies": {
+    "@types/bun": "^1.1.12",
     "ethers": "^6.13.4",
     "typescript": "^5.6.3"
   },
