--- a/wasm/package.json
+++ b/wasm/package.json
@@ -1,28 +1,29 @@
 {
-    "name": "@scalar/bitcoin-vault",
-    "version": "0.1.0",
-    "browser": "dist/index.js",
-    "main": "dist/node.js",
-    "files": [
-        "dist/*.ts",
-        "dist/*.wasm",
-        "dist/*.js"
-    ],
-    "scripts": {
-        "build:wasm": "./build.sh && node scripts/web-wasm.js",
-        "build:ts": "tsc -p tsconfig.json",
-        "build": "npm run build:wasm && npm run build:ts && node scripts/combine.js"
-    },
-    "dependencies": {
-        "@mempool/mempool.js": "^2.3.0",
-        "bip174": "^3.0.0-rc.1",
-        "bitcoin-core-ts": "^3.0.3",
-        "bitcoinjs-lib": "^7.0.0-rc.0",
-        "ecpair": "^3.0.0-rc.0",
-        "tiny-secp256k1": "^2.2.3"
-    },
-    "devDependencies": {
-        "fs-extra": "^11.2.0",
-        "typescript": "^5.6.3"
-    }
+  "name": "@scalar/bitcoin-vault",
+  "version": "0.1.0",
+  "browser": "dist/index.js",
+  "main": "dist/node.js",
+  "files": [
+    "dist/*.ts",
+    "dist/*.wasm",
+    "dist/*.js"
+  ],
+  "types": "dist/index.d.ts",
+  "scripts": {
+    "build:wasm": "./build.sh && node scripts/web-wasm.js",
+    "build:ts": "tsc -p tsconfig.json",
+    "build": "npm run build:wasm && npm run build:ts && node scripts/combine.js"
+  },
+  "dependencies": {
+    "@mempool/mempool.js": "^2.3.0",
+    "bip174": "^3.0.0-rc.1",
+    "bitcoin-core-ts": "^3.0.3",
+    "bitcoinjs-lib": "^7.0.0-rc.0",
+    "ecpair": "^3.0.0-rc.0",
+    "tiny-secp256k1": "^2.2.3"
+  },
+  "devDependencies": {
+    "fs-extra": "^11.2.0",
+    "typescript": "^5.6.3"
+  }
 }
