--- a/example/tsconfig.json
+++ b/example/tsconfig.json
@@ -1,4 +1,5 @@
 {
+  "extends": "../tsconfig.json",
   "compilerOptions": {
     "outDir": "./dist",
     "target": "ESNext",
@@ -14,5 +15,6 @@
     "types": ["bun-types"]
   },
   "include": ["**/*.ts", "**/*.test.ts"],
-  "exclude": ["node_modules", "dist"]
+  "exclude": ["node_modules", "dist"],
+  "references": [{ "path": "../wasm" }]
 }
