--- a/binding/package.json
+++ b/binding/package.json
@@ -9,7 +9,8 @@
     "bitcoin-core-ts": "^3.0.3",
     "bitcoinjs-lib": "^7.0.0-rc.0",
     "ecpair": "^3.0.0-rc.0",
-    "tiny-secp256k1": "^2.2.3"
+    "tiny-secp256k1": "^2.2.3",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/bun": "^1.1.12",
