--- a/vault/Cargo.toml
+++ b/vault/Cargo.toml
@@ -13,9 +13,14 @@ path = "src/main.rs"
 
 [dependencies]
 anyhow = "1.0.91"
-bitcoin = { version = "0.32.3", features = ["serde"] }
+bitcoin = { version = "0.32.3" }
 dotenv = "0.15.0"
 lazy_static = "1.5.0"
 serde = "1.0.213"
 thiserror = "1.0.65"
 validator = { version = "0.18.1", features = ["derive"] }
+
+[features]
+default = ["serde"]
+rand-std = ["bitcoin/rand-std"]
+serde = ["bitcoin/serde"]
