feat: fix build wasm for browser

--- a/binding/package.json
+++ b/binding/package.json
@@ -1,9 +1,17 @@
 {
-  "name": "@scalar/bitcoin-vault",
+  "name": "@scalar-lab/bitcoin-vault",
+  "version": "0.0.5",
   "license": "MIT",
+  "type": "module",
+  "module": "dist/index.js",
+  "types": "dist/index.d.ts",
+  "main": "dist/index.js",
+  "files": [
+    "dist"
+  ],
   "dependencies": {
     "@mempool/mempool.js": "^2.3.0",
-    "@scalar/bitcoin-wasm": "link:@scalar/bitcoin-wasm",
+    "@scalar-lab/bitcoin-wasm": "0.0.3",
     "bip174": "^3.0.0-rc.1",
     "bip32": "^5.0.0-rc.0",
     "bitcoin-core-ts": "^3.0.3",
@@ -14,15 +22,21 @@
   },
   "devDependencies": {
     "@types/bun": "^1.1.12",
+    "dts-bundle-generator": "^9.5.1",
     "ethers": "^6.13.4",
-    "typescript": "^5.6.3",
-    "ts-node": "^10.9.2"
+    "ts-node": "^10.9.2",
+    "typescript": "^5.6.3"
   },
   "scripts": {
-    "build": "tsc -b",
+    "build": "bun build.ts",
     "clean": "rm -rf lib/*",
     "test": "mocha -r ts-node/register test/*.test.ts --exit --no-timeout",
     "lint": "tslint -c tslint.json test/*.ts",
     "fmt": "prettier --tab-width 4 --print-width 120 --parser typescript --write test/*.ts"
+  },
+  "publishConfig": {
+    "registry": "https://registry.npmjs.org",
+    "name": "@scalar-lab/bitcoin-vault",
+    "access": "public"
   }
 }
