--- a/binding/tsconfig.json
+++ b/binding/tsconfig.json
@@ -1,20 +1,26 @@
 {
   "compilerOptions": {
-    "outDir": "./dist",
+    "module": "ESNext",
+    "lib": ["ESNext", "DOM"],
     "target": "ESNext",
-    "module": "commonjs",
-    "esModuleInterop": true,
-    "forceConsistentCasingInFileNames": true,
+    "moduleDetection": "force",
+    "rootDir": ".",
+    "outDir": "dist",
+    "allowJs": true,
+    "moduleResolution": "bundler",
+    "allowImportingTsExtensions": true,
+    "verbatimModuleSyntax": false,
+    "noEmit": true,
     "strict": true,
     "skipLibCheck": true,
-    "isolatedModules": true,
-    "declaration": true,
-    "rootDir": ".",
-    "rootDirs": ["./src", "./test"],
-    "types": ["bun-types"],
+    "noFallthroughCasesInSwitch": true,
+    "noUnusedLocals": false,
+    "noUnusedParameters": false,
+    "noPropertyAccessFromIndexSignature": false,
     "paths": {
       "@/*": ["./src/*"]
-    }
+    },
+    "rootDirs": ["./src", "./test"]
   },
   "include": ["src/**/*.ts", "test/**/*.ts"],
   "exclude": ["node_modules", "dist"]
