--- a/vault/Cargo.toml
+++ b/vault/Cargo.toml
@@ -14,12 +14,14 @@ path = "src/main.rs"
 [dependencies]
 anyhow = "1.0.91"
 bitcoin = { version = "0.32.3" }
+bitcoincore-rpc = "0.19.0"
 dotenv = "0.15.0"
 hex = "0.4.3"
 lazy_static = "1.5.0"
 serde = "1.0.213"
 thiserror = "1.0.65"
-validator = { version = "0.18.1", features = ["derive"] }
+validator = { version = "0.19.0", features = ["derive"] }
+
 
 [features]
 default = ["serde"]
