--- a/wasm/Cargo.toml
+++ b/wasm/Cargo.toml
@@ -13,6 +13,7 @@ default = ["console_error_panic_hook"]
 [dependencies]
 bitcoin = { version = "0.32.3", features = ["serde"] }
 bitcoin-vault = { package = "bitcoin-vault", path = "../vault" }
+getrandom = { version = "0.2", features = ["js"] }
 
 # The `console_error_panic_hook` crate provides better debugging of panics by
 # logging them with `console.error`. This is great for development, but requires
