--- a/vault/Cargo.toml
+++ b/vault/Cargo.toml
@@ -14,7 +14,7 @@ path = "src/main.rs"
 [dependencies]
 anyhow = "1.0.91"
 bitcoin = { version = "0.32.4" }
-bitcoincore-rpc = "0.19.0"
+bitcoincore-rpc = { version = "0.19.0" }
 dotenv = "0.15.0"
 hex = "0.4.3"
 lazy_static = "1.5.0"
