--- a/vault/Cargo.toml
+++ b/vault/Cargo.toml
@@ -18,6 +18,7 @@ bitcoincore-rpc = { version = "0.19.0" }
 dotenv = "0.15.0"
 hex = "0.4.3"
 lazy_static = "1.5.0"
+log = "0.4.11"
 serde = "1.0.213"
 thiserror = "2.0.3"
 validator = { version = "0.19.0", features = ["derive"] }
