--- a/binding/package.json
+++ b/binding/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@scalar-lab/bitcoin-vault",
-  "version": "0.0.17",
+  "version": "0.0.18",
   "license": "MIT",
   "type": "module",
   "module": "dist/index.js",
@@ -23,7 +23,7 @@
   },
   "dependencies": {
     "@mempool/mempool.js": "^2.3.0",
-    "@scalar-lab/bitcoin-wasm": "0.0.16",
+    "@scalar-lab/bitcoin-wasm": "^0.0.20",
     "bip174": "^3.0.0-rc.1",
     "bip32": "^5.0.0-rc.0",
     "bitcoin-core-ts": "^3.0.3",
