feat/ffi-and-rust: sign and collect signatures

--- a/ffi/go-vault/Makefile
+++ b/ffi/go-vault/Makefile
@@ -1,21 +1,30 @@
 LIBRARY_PATH := $(shell pwd)/../../target/release
 ROOT_DIR := $(dir $(realpath $(lastword $(MAKEFILE_LIST))))
+LIB_DIR := $(ROOT_DIR)/lib
 
 .PHONY: test copy clean debug test-linux
 
 test-linux:
 	@docker build -f docker/test.dockerfile -t bitcoin-vault-ffi $(ROOT_DIR)/../../
 	@docker run --rm -it bitcoin-vault-ffi
-	
+
+# Usage: `make test TestSignPsbtAndCollectSigs`
+# Or: `make test` to run all tests
 test:
-	@CGO_LDFLAGS="-L./lib/darwin -lbitcoin_vault_ffi" CGO_CFLAGS="-I./lib/darwin" go test ./tests/... -v -cover -count=1
+	test_file=$(t)
+	@if [ -n "$(t)" ]; then \
+		CGO_LDFLAGS="-L$(LIB_DIR) -lbitcoin_vault_ffi" CGO_CFLAGS="-I$(LIB_DIR)" go test ./tests/... -v -cover -count=1 -run "^$(t)$$"; \
+	else \
+		CGO_LDFLAGS="-L$(LIB_DIR) -lbitcoin_vault_ffi" CGO_CFLAGS="-I$(LIB_DIR)" go test ./tests/... -v -cover -count=1; \
+	fi
+
 
 copy:
-	@mkdir -p lib/darwin
-	@cp $(LIBRARY_PATH)/libbitcoin_vault_ffi.* ./lib/darwin
+	@mkdir -p $(LIB_DIR)
+	@cp $(LIBRARY_PATH)/libbitcoin_vault_ffi.* $(LIB_DIR)
 
 clean:
-	@rm -rf lib
+	@rm -rf $(LIB_DIR)
 
 debug:
 	@otool -L bin/main
