--- a/ffi/Cargo.toml
+++ b/ffi/Cargo.toml
@@ -24,3 +24,4 @@ crate-type = ["cdylib", "staticlib"]
 bitcoin-vault = { package = "bitcoin-vault", path = "../vault" }
 bitcoin = { version = "0.32.3", features = ["serde"] }
 serde_json = "1.0.132"
+thiserror = "2.0.3"
