feat: update tests

--- a/vault/.env.example
+++ b/vault/.env.example
@@ -1,13 +1,19 @@
 BOND_HOLDER_PRIVATE_KEY=<wif>
 PROTOCOL_PRIVATE_KEY=<wif>
-BOND_HOLDER_ADDRESS=<bcrt1q...> # for segwit
-BOND_HOLDER_ADDRESS=<bcrt1p...> # for p2tr
-COVENANT_PRIVKEYS=cVszWmaCvZMdxgZFMTvfHvwwKBiYZHaAJ1NmUKnqqrXsqietjGtw,cRu1NpeDu5zXRExEieQD78Juw1ACNtgLBR4Y7HLRVcgWf3Ym8ScP,cTgLJaxyDwX8ZToE9jrJgoRneuZHhyHWM4k6F7HHSYZWG382Jwzq,cVw4wnu15NXTT2zQzUVvgcVUmCMRGGgMDUuLUAvoJDdJvMEjk2j7,cQj9m5WKR7rZH254UPfbcrh7EzN4PzLdasnRrSF7XLY9ZQyHzLid
+COVENANT_PRIVKEYS=<wif>,<wif>,<wif>,<wif>,<wif>
+
+# OP_RETURN data
+TAG=SC4L4R
+VERSION=0
+SERVICE_TAG=bP3P3
+DESTINATION_CHAIN=0100000000AA36A7 # evm|11155111
+DESTINATION_TOKEN_ADDRESS=0000000000000000000000000000000000000000
+DESTINATION_RECIPIENT_ADDRESS=0000000000000000000000000000000000000000
 
 # Override default network and wallet settings
-BOND_HOLDER_WALLET=staker # Default: legacy
-NETWORK=testnet4 # Default: regtest
-BTC_NODE_ADDRESS=localhost:48332
-BTC_NODE_USER=user
-BTC_NODE_PASSWORD=password
-
+NETWORK=
+BTC_NODE_ADDRESS=
+BTC_NODE_USER=
+BTC_NODE_PASSWORD=
+BOND_HOLDER_ADDRESS=
+BOND_HOLDER_WALLET=
