feat: refactor vault core

--- a/vault/.env.example
+++ b/vault/.env.example
@@ -1,6 +1,6 @@
 BOND_HOLDER_PRIVATE_KEY=<wif>
 PROTOCOL_PRIVATE_KEY=<wif>
-COVENANT_PRIVKEYS=<wif>,<wif>,<wif>,<wif>,<wif>
+CUSTODIAN_PRIVKEYS=<wif>,<wif>,<wif>,<wif>,<wif>
 
 # OP_RETURN data
 TAG=SC4L4R
