--- a/vault/Cargo.toml
+++ b/vault/Cargo.toml
@@ -26,9 +26,11 @@ dotenv = "0.15.0"
 hex = "0.4.3"
 lazy_static = "1.5.0"
 log = "0.4.11"
-serde = "1.0.213"
+serde = { version = "1.0.213", features = ["derive"] }
 thiserror = "2.0.3"
 validator = { version = "0.19.0", features = ["derive"] }
+serde_with = "3.12.0"
+
 
 
 [features]
