feat: refactor env, setup macros

--- a/vault/.env.example
+++ b/vault/.env.example
@@ -1,6 +1,7 @@
 BOND_HOLDER_PRIVATE_KEY=<wif>
 PROTOCOL_PRIVATE_KEY=<wif>
 CUSTODIAN_PRIVKEYS=<wif>,<wif>,<wif>,<wif>,<wif>
+CUSTODIAN_QUORUM=3
 
 # OP_RETURN data
 TAG=SC4L4R
