--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [workspace]
-members = ["vault", "wasm", "ffi"]
+members = ["vault", "wasm", "ffi", "tools", "macros"]
 resolver = "2"
 
 [profile.release]
