--- a/vault/Cargo.toml
+++ b/vault/Cargo.toml
@@ -28,9 +28,9 @@ lazy_static = "1.5.0"
 log = "0.4.11"
 serde = { version = "1.0.213", features = ["derive"] }
 thiserror = "2.0.3"
-validator = { version = "0.19.0", features = ["derive"] }
+validator = { version = "0.20.0", features = ["derive"] }
 serde_with = "3.12.0"
-
+macros = { path = "../macros" }
 
 
 [features]
