--- a/tools/Cargo.toml
+++ b/tools/Cargo.toml
@@ -1,11 +1,19 @@
 [package]
-name = "tools"
+name = "bitcoin-vault-tools"
 version = "0.1.0"
 edition = "2021"
 
 [[bin]]
-name = "tvl"
-path = "src/cmd/tvl.rs"
+name = "tvl_maker"
+path = "src/bin/tvl_maker.rs"
 
 [dependencies]
 bitcoin-vault = { package = "bitcoin-vault", path = "../vault" }
+bitcoin = { package = "bitcoin", version = "0.32.4" }
+clap = { version = "4.5.10", features = ["derive"] }
+serde = { version = "1.0.213", features = ["derive"] }
+serde_json = "1.0.105"
+rusqlite = "0.32.1"
+rusqlite_migration = "1.3.1"
+anyhow = "1.0.89"
+chrono = "0.4.30"
