--- a/tools/Cargo.toml
+++ b/tools/Cargo.toml
@@ -7,6 +7,10 @@ edition = "2021"
 name = "tvl_maker"
 path = "src/bin/tvl_maker.rs"
 
+[lib]
+name = "bitcoin_vault_tools"
+path = "src/lib.rs"
+
 [dependencies]
 bitcoin-vault = { package = "bitcoin-vault", path = "../vault" }
 bitcoin = { package = "bitcoin", version = "0.32.4" }
@@ -17,3 +21,5 @@ rusqlite = "0.32.1"
 rusqlite_migration = "1.3.1"
 anyhow = "1.0.89"
 chrono = "0.4.30"
+alloy = { version = "0.11.0", features = ["full"] }
+tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
