--- a/macros/Cargo.toml
+++ b/macros/Cargo.toml
@@ -10,3 +10,6 @@ proc-macro = true
 quote = "1.0"
 syn = { version = "2.0", features = ["full"] }
 proc-macro2 = "1.0"
+
+[features]
+env_load_derive = []
