--- a/tools/Cargo.toml
+++ b/tools/Cargo.toml
@@ -23,3 +23,4 @@ anyhow = "1.0.89"
 chrono = "0.4.30"
 alloy = { version = "0.11.0", features = ["full"] }
 tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
+lazy_static = "1.5.0"
