--- a/vault/Cargo.toml
+++ b/vault/Cargo.toml
@@ -30,7 +30,7 @@ serde = { version = "1.0.213", features = ["derive"] }
 thiserror = "2.0.3"
 validator = { version = "0.20.0", features = ["derive"] }
 serde_with = "3.12.0"
-macros = { path = "../macros" }
+macros = { path = "../macros", features = ["env_load_derive"] }
 
 
 [features]
