--- a/vault/Cargo.toml
+++ b/vault/Cargo.toml
@@ -14,10 +14,6 @@ exclude = ["tests"]
 name = "bitcoin_vault"
 path = "src/lib.rs"
 
-[[bin]]
-name = "bitcoin_vault"
-path = "src/main.rs"
-
 [dependencies]
 anyhow = "1.0.91"
 bitcoin = { version = "0.32.4" }
@@ -30,7 +26,7 @@ serde = { version = "1.0.213", features = ["derive"] }
 thiserror = "2.0.3"
 validator = { version = "0.20.0", features = ["derive"] }
 serde_with = "3.12.0"
-macros = { path = "../macros", features = ["env_load_derive"] }
+macros = { path = "../macros" }
 
 
 [features]
