--- a/ffi/Cargo.toml
+++ b/ffi/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [lib]
-name = "ffi"
+name = "bitcoin_vault_ffi"
 path = "src/lib.rs"
 #crate-type = [
 #    "lib",        # Rust library (default)
