--- a/tools/Cargo.toml
+++ b/tools/Cargo.toml
@@ -24,3 +24,5 @@ chrono = "0.4.30"
 alloy = { version = "0.11.0", features = ["full"] }
 tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
 lazy_static = "1.5.0"
+bip39 = "2.1.0"
+rust-mempool = "0.0.1"
