--- a/ffi/Cargo.toml
+++ b/ffi/Cargo.toml
@@ -21,6 +21,7 @@ crate-type = ["cdylib", "staticlib"]
 
 
 [dependencies]
+anyhow = "1.0.91"
 vault = { package = "vault", path = "../vault" }
 bitcoin = { version = "0.32.3", features = ["serde"] }
 serde_json = "1.0.132"
