--- a/vault/Cargo.toml
+++ b/vault/Cargo.toml
@@ -22,8 +22,10 @@ dotenv = "0.15.0"
 hex = "0.4.3"
 lazy_static = "1.5.0"
 log = "0.4.11"
+rust-mempool = "0.0.2"
 serde = { version = "1.0.213", features = ["derive"] }
 thiserror = "2.0.3"
+tokio = { version = "1.0", features = ["full"] }
 validator = { version = "0.20.0", features = ["derive"] }
 serde_with = "3.12.0"
 macros = { path = "../macros" }
