feat: setup basic test for op_csv

--- a/bitcoin.conf
+++ b/bitcoin.conf
@@ -49,3 +49,5 @@ shrinkdebugfile=1
 # Node relay options
 acceptnonstdtxn=1
 datacarrier=2
+mocktime=1704067200  # Unix timestamp
+setmocktime=30000000        # Enable mock time
