--- a/vault/Cargo.toml
+++ b/vault/Cargo.toml
@@ -29,6 +29,8 @@ tokio = { version = "1.0", features = ["full"] }
 validator = { version = "0.20.0", features = ["derive"] }
 serde_with = "3.12.0"
 macros = { path = "../macros" }
+electrum-client = "0.23.1"
+futures = "0.3.31"
 
 
 [features]
